--- a/post.hbs
+++ b/post.hbs
@@ -55,6 +55,11 @@
             <div class="post-main__comments">
                 <h1 class="post-main__comments-title">Comments</h1>
 
+                {{#is "preview"}}
+                <p>Comments are disabled for post previews</p>
+                {{else}}
+                {{!-- Comments --}}
+                {{/is}}
             </div>
         </div>
         <div class="post post-navigator-root">
