chore: add comments

--- a/post.hbs
+++ b/post.hbs
@@ -59,6 +59,7 @@
                 <p>Comments are disabled for post previews</p>
                 {{else}}
                 {{!-- Comments --}}
+                <div id="remark42"></div>
                 {{/is}}
             </div>
         </div>
