--- a/error-404.hbs
+++ b/error-404.hbs
@@ -1,13 +1,9 @@
-{{!< default}} {{> header-background background=@site.cover_image}}
+{{!< default}} {{> hero background=@site.cover_image}}
 
-  <div class="page-header">
-    <div class="page-header__background responsive-header-img">
-      <div class="page-header__overlay"></div>
+  <main class="post">
+    <div class="post-header">
+      <h1 class="post-header__title">
+        {{statusCode}} - {{message}}
+      </h1>
     </div>
-    <div class="page-header__contents">
-      <div class="container mx-auto main">
-        <h1>{{statusCode}}</h1>
-        <p>{{message}}</p>
-      </div>
-    </div>
-  </div>
+  </main>
