chore: fix gscan

--- a/pages/exclude.hbs
+++ b/pages/exclude.hbs
@@ -1,5 +1,5 @@
-{{!< ../default}}  {{> header-background background=@site.cover_image}}
-  <div class="page-header">
+{{!< ../default}}
+  {{> hero background=@site.cover_image}}  <div class="page-header">
     <div class="page-header__background responsive-header-img">
       <div class="page-header__overlay"></div>
     </div>
